<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="notas.cl.ejercicionotas.MainActivity">

    <TabHost
        android:id="@+id/idTabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/idTabUno"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txtIngreso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingrese_nota"
                        android:inputType="numberDecimal"
                        android:labelFor="@+id/txtIngreso" />

                    <EditText
                        android:id="@+id/txtPorcentaje"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ingrese_porcentaje"
                        android:inputType="number"
                        android:labelFor="@id/txtPorcentaje" />

                    <Button
                        android:id="@+id/btnRegistroNota"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btnIngresoNota" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/idTabDos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/lwNotas"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/idTabTres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblTotalNotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblTotalNotas" />

                    <TextView
                        android:id="@+id/txtSumaNotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/promedio" />

                    <TextView
                        android:id="@+id/lblSituacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblSituacion" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
